cp3-networkpolicy/egress/license-service/bedrock-egress-ibm-licensing-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-licensing-operator
  namespace: "licNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      name: "ibm-licensing-operator"
  policyTypes:
  - Egress
  egress:
  - {}
