cp3-networkpolicy/egress/license-service/bedrock-egress-ibm-licensing-service-instance.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-licensing-service-instance
  namespace: "licNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      app: ibm-licensing-service-instance
  policyTypes:
  - Egress
  egress:
  - {}
